--- a/widget/src/charuco_target.ui
+++ b/widget/src/charuco_target.ui
@@ -56,7 +56,11 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QDoubleSpinBox" name="checkerSizeDoubleSpinBox"/>
+    <widget class="QDoubleSpinBox" name="checkerSizeDoubleSpinBox">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+    </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_4">
@@ -72,7 +76,11 @@
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QDoubleSpinBox" name="markerSizeDoubleSpinBox"/>
+    <widget class="QDoubleSpinBox" name="markerSizeDoubleSpinBox">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+    </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_5">
